# logic_fingerprint

./: .gitignore  MANIFEST.in  README.developer.md  README.md  demo_protect.py  pyproject.toml  repomix-output.xml  requirements.txt
.github/workflows/: publish.yml
.history/: pyproject_20260405102826.toml
config/: config.yaml.example
demo/: README.md  demo_anthropic_protect.py  demo_error_full.py  demo_error_simple.py  demo_openai_protect.py  demo_protect_full.py  demo_protect_ollama_simple.py
design/: 流程图.md  逻辑指纹系统·工程落地执行标准 v1.1.md  逻辑指纹系统·工程落地执行标准 v1.2.md  逻辑指纹系统·工程落地执行标准 v1.3.md  逻辑指纹系统·工程落地执行标准 v1.4.md  逻辑指纹系统·工程落地执行标准 v1.5.md  逻辑指纹系统·工程落地执行标准 v1.6.md
dist_test_logicfp/: logicfp-2.0.0-py3-none-any.whl
documents/Product/: AI 错误识别模型.md  logicfp v3 roadmap.md
documents/Tutorial/: config 参数说明.md  config-reference.md  plugin-hooks.md  protect 的用户模式与工程模式.md  user-mode-cheatsheet.md  user-mode-envelope.md  user-mode-error-codes.md  user-mode-examples.md  user-mode-quickstart.md  user-mode-vs-engineering.md  从 demo 到生产接入.md  工程模式示例.md  用户模式快速接入.md  用户模式示例.md  用户模式返回结构说明.md  用户模式速查.md  用户模式错误码说明.md
examples/: README.md  __init__.py  config_support.py  invoke_demo.ps1  invoke_services_demo.ps1  production.config.yaml.example  production_handlers.py  production_services.py  run_demo.ps1  run_services_demo.ps1  services.config.yaml.example
examples/business_skeleton/: README.md  __init__.py  config.yaml.example  settings.py
examples/langchain/: README.md  __init__.py  config.yaml.example  user_mode.py
examples/openclaw/: README.md  __init__.py  config.yaml.example  register_handlers.py  user_mode.py
examples/plugins/: README.md  basic_success_hook.py
examples/plugins/template_repo/: README.md  pyproject.toml  smoke_demo.py
examples/plugins/template_repo/src/logicfp_credibility_plugin/: __init__.py  plugin.py
examples/user_mode/: README.md  __init__.py  action_resolver.py  basic_function.py  config.yaml.example  config_diagnostics.py  (+4 more)
scripts/: build_project_index.py  dev_env.ps1  log_summary.py  query_project_index.py  release_package.py
tests/: conftest.py  test_ai_error_catalog.py  test_ai_error_public_fields.py  test_ai_error_recognition.py  test_api.py  test_azure_openai_recognizer.py  test_benchmark_hotpath.py  test_build_project_index.py  test_business_skeleton.py  test_cli.py  test_config_diagnostics.py  test_config_loader.py  test_context_builder.py  test_error_classification.py  test_executor.py  test_fsm.py  test_gemini_recognizer.py  test_handler_registrars.py  test_langchain_examples.py  test_log_summary.py  test_logging.py  test_metrics_hook.py  test_middleware.py  test_openclaw_examples.py  test_plugin_hooks.py  test_prometheus_metrics.py  test_protect.py  test_public_api.py  test_query_project_index.py  test_redis_ttl_backend.py  test_release_script.py  test_runtime.py  test_runtime_settings.py  test_user_mode_examples.py
(+99 files in other folders)
