[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logicfp"
dynamic = ["version"]
description = "logicfp protection runtime and HTTP service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "pydantic==2.12.5",
    "uvicorn==0.42.0",
]

[project.optional-dependencies]
release = [
    "build>=1.2.2",
    "twine>=6.1.0",
]

[project.scripts]
logicfp = "logicfp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["logicfp*"]

[tool.setuptools.dynamic]
version = {attr = "logicfp._version.__version__"}

[tool.uv]
cache-dir = ".uv-cache"

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp/basetemp"
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 2
