[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logicfp-credibility-plugin-template"
version = "0.1.0"
description = "Minimal plugin template for logicfp success hooks"
requires-python = ">=3.11"
dependencies = ["logicfp"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
